--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -29,7 +29,7 @@ changelog:
 release:
   github:
     owner: stnokott
-    name: eirobot
+    name: ei-robot
   name_template: "{{ .ProjectName }}-v{{ .Version }}"
   mode: append
   header: |
