--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -12,13 +12,24 @@ builds:
       - linux
       - windows
     binary: app
+changelog:
+  sort: asc
+  filters:
+    exclude:
+      - "^docs:"
+      - "^test:"
+release:
+  github:
+    owner: stnokott
+    name: ei-robot
+  name_template: "{{ .ProjectName }}-v{{ .Version }}"
 dockers:
   - image_templates:
       - "ghcr.io/stnokott/ei-robot:latest"
       - "ghcr.io/stnokott/ei-robot:{{ .Tag }}"
     goos: linux
     goarch: amd64
-    dockerfile: "{{ .Env.DOCKERFILE }}"
+    dockerfile: "Dockerfile"
     build_flag_templates:
       - "--pull"
       - "--label=org.opencontainers.image.created={{.Date}}"
@@ -31,7 +42,7 @@ dockers:
       - "ghcr.io/stnokott/ei-robot:{{ .Tag }}"
     goos: linux
     goarch: arm
-    dockerfile: "{{ .Env.DOCKERFILE }}"
+    dockerfile: "Dockerfile"
     build_flag_templates:
       - "--pull"
       - "--label=org.opencontainers.image.created={{.Date}}"
@@ -52,17 +63,6 @@ dockers:
       - "--label=org.opencontainers.image.revision={{.FullCommit}}"
       - "--label=org.opencontainers.image.version={{.Version}}"
       - "--platform=linux/arm64"
-changelog:
-  sort: asc
-  filters:
-    exclude:
-      - "^docs:"
-      - "^test:"
-release:
-  github:
-    owner: stnokott
-    name: ei-robot
-  name_template: "{{ .ProjectName }}-v{{ .Version }}"
 announce:
   telegram:
     enabled: true
