add goarch to goreleaser

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -10,7 +10,12 @@ builds:
       - CGO_ENABLED=0
     goos:
       - linux
-      - windows
+    goarch:
+      - amd64
+      - arm
+      - arm64
+    goarm:
+      - "7"
     binary: app
 changelog:
   sort: asc
@@ -25,8 +30,8 @@ release:
   name_template: "{{ .ProjectName }}-v{{ .Version }}"
 dockers:
   - image_templates:
-      - "ghcr.io/stnokott/ei-robot:latest"
-      - "ghcr.io/stnokott/ei-robot:{{ .Tag }}"
+      - "ghcr.io/stnokott/{{ .ProjectName }}:latest"
+      - "ghcr.io/stnokott/{{ .ProjectName }}:{{ .Tag }}"
     goos: linux
     goarch: amd64
     dockerfile: "Dockerfile"
@@ -38,10 +43,11 @@ dockers:
       - "--label=org.opencontainers.image.version={{.Version}}"
       - "--platform=linux/amd64"
   - image_templates:
-      - "ghcr.io/stnokott/ei-robot:latest"
-      - "ghcr.io/stnokott/ei-robot:{{ .Tag }}"
+      - "ghcr.io/stnokott/{{ .ProjectName }}:latest"
+      - "ghcr.io/stnokott/{{ .ProjectName }}:{{ .Tag }}"
     goos: linux
     goarch: arm
+    goarm: "7"
     dockerfile: "Dockerfile"
     build_flag_templates:
       - "--pull"
@@ -49,10 +55,10 @@ dockers:
       - "--label=org.opencontainers.image.title={{.ProjectName}}"
       - "--label=org.opencontainers.image.revision={{.FullCommit}}"
       - "--label=org.opencontainers.image.version={{.Version}}"
-      - "--platform=linux/arm"
+      - "--platform=linux/arm/v7"
   - image_templates:
-      - "ghcr.io/stnokott/ei-robot:latest"
-      - "ghcr.io/stnokott/ei-robot:{{ .Tag }}"
+      - "ghcr.io/stnokott/{{ .ProjectName }}:latest"
+      - "ghcr.io/stnokott/{{ .ProjectName }}:{{ .Tag }}"
     goos: linux
     goarch: arm64
     dockerfile: "Dockerfile"
