--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -30,8 +30,8 @@ release:
   name_template: "{{ .ProjectName }}-v{{ .Version }}"
 dockers:
   - image_templates:
-      - "ghcr.io/stnokott/{{ .ProjectName }}:latest"
-      - "ghcr.io/stnokott/{{ .ProjectName }}:{{ .Tag }}"
+      - "gcr.io/stnokott/{{ .ProjectName }}:latest"
+      - "gcr.io/stnokott/{{ .ProjectName }}:{{ .Tag }}"
     goos: linux
     goarch: amd64
     dockerfile: "Dockerfile"
@@ -43,8 +43,8 @@ dockers:
       - "--label=org.opencontainers.image.version={{.Version}}"
       - "--platform=linux/amd64"
   - image_templates:
-      - "ghcr.io/stnokott/{{ .ProjectName }}:latest"
-      - "ghcr.io/stnokott/{{ .ProjectName }}:{{ .Tag }}"
+      - "gcr.io/stnokott/{{ .ProjectName }}:latest"
+      - "gcr.io/stnokott/{{ .ProjectName }}:{{ .Tag }}"
     goos: linux
     goarch: arm
     goarm: "7"
@@ -57,8 +57,8 @@ dockers:
       - "--label=org.opencontainers.image.version={{.Version}}"
       - "--platform=linux/arm/v7"
   - image_templates:
-      - "ghcr.io/stnokott/{{ .ProjectName }}:latest"
-      - "ghcr.io/stnokott/{{ .ProjectName }}:{{ .Tag }}"
+      - "gcr.io/stnokott/{{ .ProjectName }}:latest"
+      - "gcr.io/stnokott/{{ .ProjectName }}:{{ .Tag }}"
     goos: linux
     goarch: arm64
     dockerfile: "Dockerfile"
