--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -31,7 +31,7 @@ release:
 dockers:
   - image_templates:
       - "ghcr.io/stnokott/{{ .ProjectName }}:latest"
-      - "ghcr.io/stnokott/{{ .ProjectName }}:{{ .Tag }}"
+      - "ghcr.io/stnokott/{{ .ProjectName }}:{{ .Version }}"
     goos: linux
     goarch: amd64
     dockerfile: "Dockerfile"
@@ -44,7 +44,7 @@ dockers:
       - "--platform=linux/amd64"
   - image_templates:
       - "ghcr.io/stnokott/{{ .ProjectName }}:latest"
-      - "ghcr.io/stnokott/{{ .ProjectName }}:{{ .Tag }}"
+      - "ghcr.io/stnokott/{{ .ProjectName }}:{{ .Version }}"
     goos: linux
     goarch: arm
     goarm: "7"
@@ -58,7 +58,7 @@ dockers:
       - "--platform=linux/arm/v7"
   - image_templates:
       - "ghcr.io/stnokott/{{ .ProjectName }}:latest"
-      - "ghcr.io/stnokott/{{ .ProjectName }}:{{ .Tag }}"
+      - "ghcr.io/stnokott/{{ .ProjectName }}:{{ .Version }}"
     goos: linux
     goarch: arm64
     dockerfile: "Dockerfile"
@@ -73,4 +73,11 @@ announce:
   telegram:
     enabled: true
     chat_id: 725149271
-    message_template: "{{ .ProjectName }} Version {{ .Tag }} ist veröffentlicht!"
+    message_template: |
+      *GoReleaser-Benachrichtigung:*
+
+      Neue Version `{{ .Version }}` für [{{ .ProjectName }}]({{ .GitURL }}) veröffentlicht!
+      Release Notes:
+      {{ .ReleaseNotes }}
+
+      `docker pull ghcr.io/stnokott/{{ .ProjectName }}:{{ .Version }}`
