--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -4,9 +4,8 @@ name: Build & Publish
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: ["main"]
-    tags:
-      - "*"
+    branches:
+      - "main"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -25,6 +24,9 @@ jobs:
       - uses: actions/checkout@v2.4.2
         with:
           fetch-depth: 0
+      - name: Exit if not tagged
+        if: startsWith(github.ref, 'refs/tags/v') != true
+        run: exit -1
       - run: git fetch --force --tags
       - uses: actions/setup-go@v3.3.0
         with:
