--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -4,8 +4,8 @@ name: Build & Publish
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches:
-      - "main"
+    tags:
+      - "*"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -19,14 +19,12 @@ env:
 
 jobs:
   goreleaser:
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3.0.2
         with:
           fetch-depth: 0
-      - name: Exit if not tagged
-        if: startsWith(github.ref, 'refs/tags/v') != true
-        run: exit -1
       - run: git fetch --force --tags
       - uses: actions/setup-go@v3.3.0
         with:
