--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -19,7 +19,7 @@ env:
 
 jobs:
   goreleaser:
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'main'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3.0.2
