--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -4,8 +4,8 @@ name: Build & Publish
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    tags:
-      - "*"
+    branches:
+      - "main"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -19,7 +19,6 @@ env:
 
 jobs:
   goreleaser:
-    if: startsWith(github.ref, 'refs/heads/v')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3.0.2
