internal: add internal wildcard for release notes

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -26,6 +26,7 @@ changelog:
       - "^docs:"
       - typo
       - "^test:"
+      - "^internal:"
   groups:
     - title: Features
       regexp: "^.*feat[(\\w)]*:+.*$"
