ci(.goreleaser.yaml): add target_commitish to goreleaser config

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -43,6 +43,7 @@ changelog:
     - title: Others
       order: 999
 release:
+  target_commitish: "{{ .Commit }}"
   github:
     owner: stnokott
     name: ei-robot
