--- a/cz.yaml
+++ b/cz.yaml
@@ -1,5 +1,5 @@
 commitizen:
-  name: cz_conventional_commits
+  name: cz_conventional_commit
   tag_format: v$version
   version: 0.1.0
   version_files:
