--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -95,10 +95,10 @@ announce:
     enabled: true
     chat_id: 725149271
     message_template: |
-      Neue Version *{{ replace .Version "." "\." }}* für *{{ .ProjectName }}* veröffentlicht!
+      Neue Version *{{ replace .Version "." "\\." }}* für *{{ .ProjectName }}* veröffentlicht!
       Release Notes:
-      {{ replace .ReleaseNotes "." "\." }}
+      {{ replace .ReleaseNotes "." "\\." }}
 
-      `docker pull ghcr.io/stnokott/{{ .ProjectName }}:{{ replace .Version "." "\." }}`
+      `docker pull ghcr.io/stnokott/{{ .ProjectName }}:{{ replace .Version "." "\\." }}`
 
       {{ .GitURL }}
