--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,3 +18,12 @@ updates:
       - "stnokott"
     reviewers:
       - "stnokott"
+  - directory: "/"
+    package-ecosystem: docker
+    schedule:
+      interval: "weekly"
+      timezone: "Europe/Berlin"
+    assignees:
+      - "stnokott"
+    reviewers:
+      - "stnokott"
